# luffy

./: .gitignore  CLAUDE.md  INSTRUCTIONS.md  README.md  index.html  package.json  vite.config.ts
src/: App.tsx  CLAUDE.md  constants.ts  index.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.config/luffy/: sessions.json
src-tauri/capabilities/: default.json
src-tauri/src/: CLAUDE.md  auto_respond.rs  cost.rs  git.rs  lib.rs  main.rs  pty_stream.rs  session_meta.rs  stuck_detector.rs  templates.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/session/: events.rs  health.rs  manager.rs  mod.rs  model.rs
src-tauri/src/status/: detector.rs  mod.rs
src/components/: AutoResponsePanel.test.tsx  AutoResponsePanel.tsx  BroadcastBar.test.tsx  BroadcastBar.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  EventLog.test.tsx  EventLog.tsx  KeyboardHelp.test.tsx  KeyboardHelp.tsx  LayoutSwitcher.test.tsx  LayoutSwitcher.tsx  NewSessionModal.test.tsx  NewSessionModal.tsx  PaneGrid.test.tsx  PaneGrid.tsx  QuickCommands.test.tsx  QuickCommands.tsx  SearchPanel.test.tsx  SearchPanel.tsx  SessionSidebar.test.tsx  SessionSidebar.tsx  StatusBadge.test.tsx  StatusBadge.tsx  TemplatesPanel.test.tsx  TemplatesPanel.tsx  TerminalPane.test.tsx  TerminalPane.tsx  Toast.test.tsx  Toast.tsx
src/hooks/: useClock.test.ts  useClock.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useTauri.ts
src/store/: sessions.test.ts  sessions.ts
src/utils/: sessions.test.ts  sessions.ts  time.test.ts  time.ts
(+1 files in other folders)
